Label sections in flowchart

--- a/skysub.tex
+++ b/skysub.tex
@@ -292,8 +292,7 @@ This non-repetitive sampling of sky fields yielded two possible advantages: 1) w
 \begin{figure*}[t]
 \centering
 \includegraphics[width=\textwidth]{figs/pipeline_flowchart}
-\caption{Flowchart representation of the \androids\ WIRCam pipeline, from receipt of CFHT \iiwione\ data products to rendering of M31 mosaics.
-\todo{Label article sections within the flowchart (once known).}}
+\caption{Flowchart representation of the \androids\ WIRCam pipeline, from receipt of CFHT \iiwione\ data products to rendering of M31 mosaics.}
 \label{fig:flowchart}
 % made with Illustrator
 \end{figure*}
