--- a/skysub.tex
+++ b/skysub.tex
@@ -210,7 +210,7 @@ It is truly the advent of NIR focal plane arrays, like WIRCam, that has enabled 
 
 The \androids\ WIRCam survey is designed to simultaneously resolve stars and recover the integrated surface brightness of the entire M31 disk.
 As discussed in \Sec{intro}, NIR observations require frequent monitoring of the background.
-\cite{Vaduvescu:2004} found, for example, that the NIR background intensity can vary by 0.5\% per minute; yet the low surface brightness of M31's NIR disk at $R=20$~kpc requires the background level to be constrained to approximately 0.01\% \todo{(EXPRESS IN MAGS TOO)}.
+\cite{Vaduvescu:2004} found, for example, that the NIR background intensity can vary by 0.5\% per minute; yet the low surface brightness of M31's NIR disk at $R=20$~kpc requires the background level to be constrained to approximately 0.01\% (equivalently, $\sim 0.01$~mag).
 With a $190\arcmin \times 60\arcmin$ optical disk, M31 is much larger than the WIRCam fields of view, and monitoring of the background zero-point is only possible by periodically pointing the telescope away from M31 towards blank sky through \emph{sky-target} (ST) nodding. 
 The fundamental compromise of ST nodding observation programs is to balance the cadence of sky sampling with the efficiency of observing the target itself.
 Although studies such as \cite{Vaduvescu:2004}, and references therein, provide good guidelines for NIR background behaviour, no program has attempted to construct a near-IR surface brightness mosaic covering an area as large and faint as M31's disk.
