Convert Table 2 offset hierarchy to nightset

--- a/skysub.tex
+++ b/skysub.tex
@@ -914,12 +914,12 @@ Reducing this latency, and this nodding distance, is impossible in WIRCam observ
 
 \begin{table}[t]
 \centering
-\caption[Hierarchy of scalar sky offsets]{Hierarchy of scalar sky offsets (using \texttt{FW100K} RT flat fielding, and median background subtraction).
+\caption[Hierarchy of scalar sky offsets]{Hierarchy of scalar sky offsets (using \texttt{NIGHT} flat fielding, and median background subtraction).
   Each level of sky offset is defined in \Eq{netoffset}.
 $\langle I_\mathrm{sky}\rangle$ is taken as the instantaneous background level for the images being sampled (see \Fig{net_sky_level} for the distribution of background levels).}
 \label{tab:offset_hierarchy}
 % made with $andpipe/wircam/calibset/mosaic/scalar_offset_hierarchy.py
-\input{tables/fw100k_medsky_offset_hierarchy.tex}
+\input{tables/nightset_medsky_offset_hierarchy.tex}
 \end{table}
 
 \subsection{Acceptability of Sky Offsets}
