--- a/skysub.tex
+++ b/skysub.tex
@@ -965,17 +965,18 @@ A measure of the limitation of sky offset fitting are the residual image level d
 Uncorrected, the ensemble of coupled blocks have a mean intensity difference of $\sim 1\%$ of the typical background intensity.
 Scalar sky offsets decrease the differences between overlapping fields to $\sim 0.2\%$.
 
-\Fig{fw100k_medsky_scalar_resid_sbfrac} shows the block-to-block residual differences as a fraction of the local surface brightness.
+\Fig{scalar_resid}a shows the block-to-block residual differences as a fraction of the local surface brightness.
 Note that throughout the bright inner disk of M31, block-to-block residuals are negligible compared to the disk signal, at the mosaic periphery ($R\sim 20$~kpc), field-to-field residuals become comparable to, or greater than, the disk surface brightness.
 The poor fit is driven primarily by diminishing disk signal, rather than poor convergence of sky offsets.
-This can be seen by plotting the magnitude of block-to-block residuals (in units of background brightness) in \Fig{fw100k_medsky_scalar_resid_skyfrac}.
+This can be seen by plotting the magnitude of block-to-block residuals (in units of background brightness) in \Fig{scalar_resid}b.
 There, significant residuals are distributed throughout the disk, rather than the low-SB periphery of the mosaic.
 
 However, the inability of scalar sky offset optimization to eliminate residual image differences should not be interpreted as a failure to detect the global minimum; the sky offset optimization algorithm (\Sec{msrnm_algo}) appears robust in yielding this offset solution set.
-Evidence of this can be seen in \Fig{fw100k_medsky_scalar_resid_sigmafrac}, where block-to-block network connections are coloured by the ratio of the residual block-to-block intensity difference to the uncertainty in the block-to-block difference image.
+Evidence of this can be seen in \Fig{scalar_resid}c, where block-to-block network connections are coloured by the ratio of the residual block-to-block intensity difference to the uncertainty in the block-to-block difference image.
 The sky offsets solved by the NM simplex algorithm are within the uncertainties of the difference images themselves; better scalar sky offsets \emph{cannot} be made with the WIRCam blocks that our pipeline has produced.
 Our ability to produce a continuous NIR mosaic are fundamentally limited by our ability to the subtract the true background shape seen at the M31 disk.
 As described in \Sec{flatanalysis}, sky-target nodding on the scale of M31 introduces an intrinsic shape uncertainty of 0.3\% of the NIR background levels.
+
 
 \begin{table}[t]
 \centering
@@ -990,29 +991,37 @@ Differences are presented as a percent of the mean background level seen by obse
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_sbfrac}
-\caption{Map of residual block-to-block surface brightness differences as a fraction of mean local surface brightness, after scalar fitting.
-  This graph mimics the spatial distribution of the 2007B and 2009B WIRCam fields (\Fig{fieldmap}), with the footprints have been exploded to allow room for lines to connect coupled blocks.
-}
-\label{fig:fw100k_medsky_scalar_resid_sbfrac}
-% made with $andpipe/wircam/calibset/mosaic/networkmap.py
+\includegraphics[width=\columnwidth]{figs/scalar_resid}
+\caption{Map of residual block-to-block surface brightness differences after sky offsets: (a) as a fraction of mean local surface brightness, (b) as a fraction of mean local surface brightness, (c) as a fraction of the standard deviation of the difference image.
+These graphs mimic the spatial distribution of the 2007B and 2009B WIRCam fields (\Fig{fieldmap}), with the footprints exploded to allow room for lines to connect coupled blocks.}
+\label{fig:scalar_resid}
 \end{figure}
 
-\begin{figure}[t]
-\centering
-\includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_skyfrac}
-\caption{Map of residual block-to-block surface brightness differences as a fraction of the mean background level, after scalar fitting.}
-\label{fig:fw100k_medsky_scalar_resid_skyfrac}
-% made with $andpipe/wircam/calibset/mosaic/networkmap.py
-\end{figure}
+% \begin{figure}[t]
+% \centering
+% \includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_sbfrac}
+% \caption{Map of residual block-to-block surface brightness differences as a fraction of mean local surface brightness, after scalar fitting.
+%   This graph mimics the spatial distribution of the 2007B and 2009B WIRCam fields (\Fig{fieldmap}), with the footprints have been exploded to allow room for lines to connect coupled blocks.
+% }
+% \label{fig:fw100k_medsky_scalar_resid_sbfrac}
+% % made with $andpipe/wircam/calibset/mosaic/networkmap.py
+% \end{figure}
 
-\begin{figure}[t]
-\centering
-\includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_sigmafrac}
-\caption{Map of residual block-to-block surface brightness differences as a fraction of the standard deviation of the difference image, after scalar fitting.}
-\label{fig:fw100k_medsky_scalar_resid_sigmafrac}
-% made with $andpipe/wircam/calibset/mosaic/networkmap.py
-\end{figure}
+% \begin{figure}[t]
+% \centering
+% \includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_skyfrac}
+% \caption{Map of residual block-to-block surface brightness differences as a fraction of the mean background level, after scalar fitting.}
+% \label{fig:fw100k_medsky_scalar_resid_skyfrac}
+% % made with $andpipe/wircam/calibset/mosaic/networkmap.py
+% \end{figure}
+
+% \begin{figure}[t]
+% \centering
+% \includegraphics[width=3.5in]{figs/fw100k_medsky/networks/scalar_resid_sigmafrac}
+% \caption{Map of residual block-to-block surface brightness differences as a fraction of the standard deviation of the difference image, after scalar fitting.}
+% \label{fig:fw100k_medsky_scalar_resid_sigmafrac}
+% % made with $andpipe/wircam/calibset/mosaic/networkmap.py
+% \end{figure}
 
 
 \subsection{The Growth of Sky Offsets in Time and Space}
