--- a/skysub.tex
+++ b/skysub.tex
@@ -1177,28 +1177,35 @@ Since no absolutely-calibrated NIR photometry of M31's surface brightness exists
 We have presented near-infrared ($J$ and $K_s$) images of M31's entire bulge and disk with CFHT/WIRCam.
 These maps surpass the 2MASS \citep{Beaton:2007} and Spitzer \citep{Barmby:2006} mosaics with superior resolution that permits the identification of individual stars throughout M31's mid and outer disk.
 The dataset is also complementary to the HST/WF3 PHAT survey \citep{Dalcanton:2012} by providing complete coverage of M31's entire disk within $R=22$~kpc, and by offering a broader NIR colour baseline ($J-K_s$) than is offered by WF3 (approximately $J-H$).
-NIR mosaics of M31 have crucial applications for studies of the nearly attenuation-free stellar structure of our nearest spiral neighbour, and for tests of stellar population synthesis models in NIR regimes.
+NIR mosaics of M31 have crucial applications for studies of the nearly attenuation-free stellar structure of our nearest spiral neighbour and for tests of stellar population synthesis models in NIR regimes.
 
 Our focus in this paper has been the establishment of procedures for accurately recovering the NIR surface brightness across 3~sq.~deg.\ of the M31 disk using a sky-target nodding observing strategy with WIRCam on CFHT\@.
 We have compared two different observing methods to study the effects of sky target nodding cadences and patterns on sky subtraction uncertainties.
-We have also developed and tested our WIRCam pipeline for flat fielding, zero-point estimation, median sky subtraction, and sky offset optimization.
+We have also developed and tested flat fielding, zero-point estimation, median sky subtraction, and sky offset optimization procedures in our WIRCam pipeline.
 
-We find that our NIR SB reconstruction is limited in two regimes: large scale reconstruction of surface brightness with sky offsets, and surface brightness \emph{shape} uncertainties across individual WIRCam images.
-On a large scale, the necessity of nodding between sky and target limits our direct knowledge of the background level on the disk by $\gtrsim 2$\% of the background level.
-Strictly minimizing latency between sky and disk integrations (as in the 2009B program) provides only limited improvement in our knowledge of the background level on the disk because of the overhead in nodding the telescope, and spatial structure in the NIR skyglow itself.
-Sky offset optimization is successful in reducing block-to-block surface brightness differences to $<0.1$\% of the background level.
-Given a realized set of blocks, our optimization algorithm reliably finds a consistent solution, so any errors in surface brightness shape across the mosaic are caused by errors in the shapes of individual blocks (see below).
-There is, however, an uncertainty in our net zero offset, of order $\sim \sigma_{\Delta_B} / \sqrt{N_\mathrm{blocks}}$; 0.16\% of the background level.
-This zero-point can ultimately be established using resolved stellar populations, the subject of a forthcoming \androids\ study.
-
-The shape of a WIRCam frame can be affected by both flat field uncertainties and additive background uncertainties.
+The surface brightness accuracy of a WIRCam frame is affected by both flat field uncertainties and additive background uncertainties.
 We recommend using sky flats built from images collected every night to calibrate WIRCam images since these capture the gain structure of WIRCam detectors (unlike dome flats).
-We also tested sky flats built on longer time spans (across a WIRCam queue run) or shorter (updated every half hour), but find that these either introduce flat fielding biases or become responsive only to changes in additive background contamination, respectively.
+We also tested sky flats built on longer time spans (across a WIRCam queue run) or shorter spans (updated every half hour), but find that these either introduce flat fielding biases or become responsive only to changes in additive background contamination, respectively.
 Although an additive background (\eg thermal or scattered light) contaminates these flats, the influence of flat fielding errors on surface brightness shapes is minimal across the background-dominated mosaic.
 Instead, we find that the surface brightness across WIRCam frames is uncertain by 0.3\% of the background intensity due to variations in the background between sky and target fields.
 
-\todo{Segue to future work}
-\todo{Re-integrate recommendations for similar surveys}
+The necessity of nodding between sky and target fields limits our direct knowledge of the background level on the disk by $\gtrsim 2$\% of the background level.
+Strictly minimizing latency between sky and disk integrations (as in the 2009B program) provides only limited improvement in our knowledge of the background level on the disk because of the overhead in nodding the telescope, and spatial structure in the NIR sky glow itself.
+Sky offset optimization is successful in reducing block-to-block surface brightness differences to $<0.1$\% of the background level.
+Our optimization algorithm reliably finds a consistent sky offset solution, so any errors in surface brightness shape across the mosaic are caused by errors in the shapes of individual blocks.
+There is, however, an uncertainty in the zero point of sky offsets, of order $\sim \sigma_{\Delta_B} / \sqrt{N_\mathrm{blocks}}$; 0.16\% of the background level.
+This zero-point will ultimately be established using resolved star counts, the subject of a forthcoming \androids\ study.
+
+Our experience suggests that wide-field NIR programs that require large sky-target nods must tune their observing strategies with sky offset optimization in mind, rather than simply minimizing sky sampling latency.
+Sky offset optimization is aided by having many independent blocks covering the target to decrease the statistical zero-point uncertainty.
+Increasing the number of \emph{independent} blocks (observed hours or even a night apart to decouple sky and instrumental biases) is the most reliable way to establish the absolute surface brightness accuracy of the mosaic.
+Since sky offsets are further biased by any surface brightness shape errors in blocks (realized as our inability to diminish block-to-block offsets below $\sim 0.1\%$ of background brightness), we propose that blocks be interlaced by 50\% (so that one detector completely overlaps a detector from an adjacent blocks).
+This interlacing pattern would enable the marginalization of shape errors across the entire detector frame.
+By doubling the number of blocks, each with individually halved exposure times, the mosaic could be reproduced with an equivalent net integration time.
+
+In future work we shall use these NIR mosaics to characterize the structure, stellar mass distribution and stellar populations of M31 in conjunction with optical CFHT/MegaCam imaging also acquired by the \androids\ survey \citep{Sick:2013a}.
+We are also compiling a panchromatic catalog of resolved stars across the M31 disk.
+By directly identifying the stars that contribute to the NIR light of a galaxy, we will assess long-standing tensions between NIR isochrones and broadband SED modelling of galaxies.
 
 % We now summarize our analysis of the data taking and reduction methods developed in this work, and in doing so, formulate a set of best practices for similar wide-field NIR surveys employing sky-target nodding.
 
